objects/AccountRelationship__c.object
<CustomObject>
    <description>This object identifies ad-hoc relationships between any two organizations (whether Institutions, members, prospects, or otherwise), and allows for the connection to any associated products and competitive information.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Provide general comments and/or a description of the nature of the relationship.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this Institution use EMR software from this 3rd party?</inlineHelpText>
        <label>EMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this 3rd party sell GPO services to the Institution?</inlineHelpText>
        <label>GPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <description>The ABC Institution that the Account relates to</description>
        <inlineHelpText>The ABC Institution that the Account relates to</inlineHelpText>
        <label>Institution</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>External</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Third Party</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>3rd Party Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this 3rd party sell products to the Institution?</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this 3rd party sell Student Information System services?</inlineHelpText>
        <label>SIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The 3rd party Account that has a relationship with the Institution</description>
        <inlineHelpText>The 3rd party Account that has a relationship with the Institution</inlineHelpText>
        <label>Third Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Relationships</relationshipLabel>
        <relationshipName>Account_Relationships1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account Relationship</label>
    <nameField>
        <label>Account Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_checkboxes</fullName>
        <active>true</active>
        <errorConditionFormula>(IF(EMR__c, 
    1, 
    0) + 
 IF(GPO__c, 
    1, 
    0) + 
 IF(SIS__c, 
    1, 
    0)) &gt; 1</errorConditionFormula>
        <errorMessage>You may select only one major Product/Service category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Prevent_Inst_Or_Third_Party_Change</fullName>
        <active>true</active>
        <description>Account Relationship records cannot change the tagged Institution or Third Party.  Please create a new record for other relationships or add information to the Comments field as needed. Created for CR-20150116-8581.</description>
        <errorConditionFormula>OR(
AND(
ISCHANGED(Institution__c),
NOT(ISBLANK(Institution__c))
),
AND(
ISCHANGED(Third_Party__c),
NOT(ISBLANK(Third_Party__c))
)
)</errorConditionFormula>
        <errorMessage>Account Relationship records cannot change the tagged Institution or Third Party.  Please create a new record for other relationships or add information to the Comments field as needed.</errorMessage>
    </validationRules>
</CustomObject>